<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="data_last">\u5269\u4f59\uff1a</string>
    <string name="app_name">Duole</string>
    <string name="itemlist_lost">\u8d44\u6e90\u5217\u8868\u4e0d\u5b58\u5728\uff01</string>
    <string name="date">\u65e5\u671f</string>
    <string name="minute">\u5206\u949f</string>
    <string name="network_config">\u7f51\u7edc\u8bbe\u7f6e</string>
    <string name="wifi_connection">Wi-Fi\u8fde\u63a5</string>
    <string name="network">\u7f51\u7edc</string>
    <string name="network_config_summary">\u70b9\u6b64\u8fdb\u884c\u7f51\u7edc\u8bbe\u7f6e</string>
    <string name="system_tweak">\u5bb6\u957f\u7ba1\u7406</string>
    <string name="device_id">\u673a\u5668\u7801</string>
    <string name="username">\u7528\u6237\u540d</string>
    <string name="babyname">\u5b9d\u5b9d\u540d\u5b57</string>
    <string name="birthday">\u751f\u65e5</string>
    <string name="sex">\u6027\u522b</string>
    <string name="config">\u8bbe\u7f6e</string>
    <string name="user_info">\u7528\u6237\u4fe1\u606f</string>
    <string name="getting_user_info">\u6b63\u5728\u83b7\u53d6\u7528\u6237\u4fe1\u606f\u002e\u002e\u002e</string>
    <string name="bindDeviceTitle">\u8bbe\u5907\u7ed1\u5b9a</string>
    <string name="volume_tweak">\u97f3\u91cf\u8bbe\u7f6e</string>
    <string name="bright_tweak">\u4eae\u5ea6\u8bbe\u7f6e</string>
    <string name="about">\u5173\u4e8e</string>
    <string name="update_start">\u5f00\u59cb\u66f4\u65b0</string>
    <string name="current_time">\u7cfb\u7edf\u65f6\u95f4\uff1a\u0020</string>
    <string name="version_new">\u53d1\u73b0\u65b0\u7248\u672c</string>
    <string name="version">\u7248\u672c</string>
    <string name="change_log">\u66f4\u65b0\u5185\u5bb9</string>
    <string name="caution">\u8bf7\u6ce8\u610f</string>
    <string name="jinzixuan">\u91d1\u5b57\u8f69</string>

    <!-- button -->
    <string name="btnClose">\u5173\u95ed</string>
    <string name="btnPositive">\u786e\u5b9a</string>
    <string name="btnNegative">\u53d6\u6d88</string>
    <string name="strDeviceId">\u8bbe\u5907\u7f16\u7801</string>
    <string name="strUserName">\u7528\u6237\u540d\u0020\u003a\u0020\u0020</string>
    <string name="strPassword">\u5bc6\u7801\u0020\u0020\u0020\u003a\u0020\u0020</string>
    <string name="device_active">\u8bbe\u5907\u6fc0\u6d3b</string>

    <!-- sex -->
    <string name="sex_male">\u7537</string>
    <string name="sex_female">\u5973</string>
    <string name="sex_unborn">\u672a\u51fa\u751f</string>

    <!-- security -->
    <string name="security_title">\u5b89\u5168\u8bbe\u7f6e</string>
    <string name="security_exit">\u5173\u673a</string>
    <string name="security_changePasswd">\u4fee\u6539\u5bc6\u7801</string>
    <string name="check_update">\u68c0\u67e5\u66f4\u65b0</string>
    <string name="client_uptodate">\u5ba2\u6237\u7aef\u5df2\u7ecf\u662f\u6700\u65b0\u3002</string>
    <string name="local_clear">\u91cd\u7f6e</string>
    <string name="startSetup">\u8bbe\u7f6e\u5411\u5bfc</string>

    <!-- tips -->
    <string name="network_unavailable">\u7f51\u7edc\u4e0d\u53ef\u7528\uff0c\u8bf7\u5148\u8fdb\u884c\u7f51\u7edc\u8bbe\u7f6e\u3002</string>
    <string name="register_device">\u70b9\u6b64\u67e5\u770b\u6fc0\u6d3b\u6d41\u7a0b\u3002</string>
    <string name="password_set_success">\u5bc6\u7801\u4fee\u6539\u6210\u529f</string>
    <string name="downloading">\u4e0b\u8f7d\u4e2d\u002e\u002e\u002e</string>
    <string name="storage">\u5b58\u50a8\u7a7a\u95f4</string>
    <string name="tf_unmounted">\u6b63\u5728\u521d\u59cb\u5316\uff0c\u8bf7\u7a0d\u5019\u3002</string>
    <string name="tf_total">\u5b58\u50a8\u5361\u603b\u5bb9\u91cf\uff1a</string>
    <string name="tf_used">\u5df2\u4f7f\u7528\uff1a</string>
    <string name="drag_change_volume">\u5de6\u53f3\u62d6\u52a8\u64ad\u653e\u6309\u94ae\uff0c\u53ef\u4ee5\u8c03\u8282\u97f3\u91cf\u5927\u5c0f\u3002</string>
    <string name="settime">\u70b9\u6b64\u8bbe\u7f6e\u65f6\u95f4\u3002</string>
    <string name="user_unregiste">\u672a\u6ce8\u518c\u7528\u6237</string>

    <!-- password -->
    <string name="parent_tweak_password">\u5bb6\u957f\u7ba1\u7406\u5bc6\u7801</string>
    <string name="wifi_password">WIFI\u5bc6\u7801</string>
    <string name="input_password">\u8f93\u5165\u5bc6\u7801</string>
    <string name="password">\u5bc6\u7801</string>
    <string name="password_old">\u65e7\u5bc6\u7801</string>
    <string name="password_new">\u65b0\u5bc6\u7801</string>
    <string name="password_confirm">\u786e\u8ba4\u5bc6\u7801</string>

    <!-- error -->
    <string name="password_wrong">\u5bc6\u7801\u9519\u8bef</string>
    <string name="passwrod_wrong_full">\u60a8\u8f93\u5165\u7684\u5bc6\u7801\u4e0d\u6b63\u786e\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\u5bc6\u7801\u3002</string>
    <string name="password_retype">\u5bc6\u7801\u9519\u8bef\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165</string>
    <string name="password_old_wrong">\u539f\u5bc6\u7801\u4e0d\u6b63\u786e</string>
    <string name="password_not_same">\u4e24\u6b21\u8f93\u5165\u7684\u5bc6\u7801\u4e0d\u4e00\u81f4</string>
    <string name="password_cannot_null">\u5bc6\u7801\u4e0d\u80fd\u4e3a\u7a7a</string>
    <string name="download_error">\u4e0b\u8f7d\u51fa\u9519\uff0c\u8bf7\u91cd\u8bd5\u3002</string>

    <!-- wifi -->
    <string name="wifi_enabling">\u6b63\u5728\u8fde\u63a5\uff1a</string>
    <string name="wifi_enabled">\u5df2\u8fde\u63a5\uff1a</string>
    <string name="wifi_closing">\u6b63\u5728\u5173\u95ed</string>
    <string name="wifi_closed">\u5df2\u5173\u95ed</string>
    <string name="wifi_unknown">\u9519\u8bef</string>
    <string name="wifi_opened">\u5df2\u5f00\u542f</string>

    <!-- anti fatgure -->
    <string name="anti_fatigure">\u9632\u6c89\u8ff7\u8bbe\u7f6e</string>
    <string name="entime">\u4f7f\u7528\u65f6\u95f4\u5269\u4f59</string>
    <string name="enterteiment">\u4f7f\u7528\u65f6\u95f4</string>
    <string name="anti_rest">\u4f11\u606f\u65f6\u95f4</string>
    <string name="sleep">\u7761\u7720\u65f6\u95f4</string>
    <string name="restime">\u4f11\u606f\u65f6\u95f4\u5269\u4f59</string>
    <string name="sleepstart">\u7761\u7720\u5f00\u59cb\u65f6\u95f4</string>
    <string name="sleepend">\u7761\u7720\u7ed3\u675f\u65f6\u95f4</string>
    <string name="batterylevel">\u7535\u6c60\u7535\u91cf</string>
    <string name="systemstatus">\u7cfb\u7edf\u72b6\u6001</string>
    <string name="sleep_delay_title">\u5c06\u7761\u7720\u65f6\u95f4\u63a8\u8fdf</string>
    <string name="player_tip">\u64ad\u653e\u6240\u9009\u89c6\u9891\uff0c\u9700\u8981\u9009\u62e9\u76f8\u5e94\u64ad\u653e\u5668\u3002\n\u8bf7\u767b\u5f55\u0077\u0077\u0077\u002e\u0064\u0075\u006f\u006c\u0065\u0079\u0075\u0061\u006e\u002e\u0063\u006f\u006d\uff0c\u8fdb\u5165\u201c\u4eb2\u5b50\u6e38\u620f\u201d\u680f\u76ee\u9009\u62e9\u64ad\u653e\u5668\u3002</string>
    <string name="player_notfound_title">\u672a\u53d1\u73b0\u89c6\u9891\u64ad\u653e\u5668\u3002</string>

    <!-- alert -->
    <string name="clear_local">\u672c\u6b21\u64cd\u4f5c\u5c06\u91cd\u7f6e\u5ba2\u6237\u7aef\u672c\u5730\u8d44\u6e90\u3002</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="power_save">\u8282\u7535\u6a21\u5f0f</string>
    <string name="power_save_tip">\u70b9\u51fb\u786e\u5b9a\u5c06\u5f00\u542f\u8282\u7535\u6a21\u5f0f\u002e\n\u5728\u8282\u7535\u6a21\u5f0f\u4e0b\uff0c\u5982\u679c\u51fa\u73b0\u6309\u4e0b\u0048\u006f\u006d\u0065\u952e\u65e0\u6cd5\u5524\u9192\u5c4f\u5e55\u7684\u60c5\u51b5\u002c\u8bf7\u6309\u4e0b\u673a\u5668\u53f3\u4e0a\u89d2\u7684\u201c\u7535\u6e90\u201d\u6309\u952e\uff0c\u5373\u53ef\u5524\u9192\u5c4f\u5e55\u3002</string>
    <string name="local_clearing">\u8bf7\u7a0d\u7b49\uff0c\u6b63\u5728\u91cd\u7f6e\u672c\u5730\u73af\u5883\u3002</string>
    <string name="check_update_getting_version">\u6b63\u5728\u83b7\u53d6\u5ba2\u6237\u7aef\u7248\u672c\u3002</string>
    <string name="check_update_downloading">\u6b63\u5728\u4e0b\u8f7d\uff0c\u8bf7\u7a0d\u7b49\u3002</string>
    <string name="check_update_install">\u4e0b\u8f7d\u5b8c\u6210\uff0c\u6b63\u5728\u5b89\u88c5\uff0c\u8bf7\u7a0d\u5019\u3002</string>

</resources>